@@ -46,7 +46,7 @@ COBC_DEFINE_FUNCTION (COBC_UNSTRING, "cob_unstring", -1)
 COBC_DEFINE_FUNCTION (COBC_WRITE, "cob_write", 2)
 COBC_DEFINE_FUNCTION (COBC_WRITE_LINES, "cob_write_lines", 2)
 COBC_DEFINE_FUNCTION (COBC_WRITE_PAGE, "cob_write_page", 1)
-COBC_DEFINE_INLINE (COBC_CALL, output_call_statement, 3)
+COBC_DEFINE_INLINE (COBC_CALL, output_call_statement, 2)
 COBC_DEFINE_INLINE (COBC_DISPLAY, output_display, 2)
 COBC_DEFINE_INLINE (COBC_FILE_HANDLER, output_file_handler, 4)
 COBC_DEFINE_INLINE (COBC_GOTO, output_goto, 1)
